modules/vpc/5-routes.tf
# Private Route Table with default route to the NAT Gateway
resource "aws_route_table" "private" {
    vpc_id = aws_vpc.this.id

    route {
        cidr_block = "0.0.0.0/0"
        nat_gateway_id = aws_nat_gateway.this.id
    }

    tags = {
        Name = "${var.env}-rt-private"
    }
  
}

# Public Route Table with default route to the Internet Gateway
resource "aws_route_table" "public" {
    vpc_id = aws_vpc.this.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.this.id
    }

    tags = {
        Name = "${var.env}-rt-public"
    } 
}

resource "aws_route_table_association" "private" {
    count = length(var.private_subnets)
    subnet_id = aws_subnet.private_subnet[count.index].id
    route_table_id = aws_route_table.private.id
}

resource "aws_route_table_association" "public" {
    count = length(var.public_subnets)
    subnet_id = aws_subnet.public_subnet[count.index].id
    route_table_id = aws_route_table.public.id
}
